# knowledge-centric-ai

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENCE  README.md
knowledge-centric-information-systems/: citation.bib
papers/institutional-capability-lineages/reference-implementation/: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
papers/institutional-capability-lineages/reference-implementation/src/icla/: __init__.py  cli.py  config.py  exceptions.py
papers/institutional-capability-lineages/reference-implementation/src/icla/api/: __init__.py  contracts.py  facade.py
papers/institutional-capability-lineages/reference-implementation/src/icla/models/: __init__.py  assembly.py  capability.py  ckc.py  common.py  crystallization.py  evidence.py  governance.py  intent.py  lineage.py  registry.py  resolution.py
papers/institutional-capability-lineages/reference-implementation/src/icla/policies/: __init__.py  admissibility.py  assurance.py  authorization.py  conflict_resolution.py  evaluation.py  freshness.py  mandate.py  outcome_coverage.py
papers/institutional-capability-lineages/reference-implementation/src/icla/repositories/: __init__.py  assembly_repository.py  ckc_repository.py  evidence_repository.py  governance_repository.py  lineage_repository.py  registry_repository.py
papers/institutional-capability-lineages/reference-implementation/tests/conformance/: test_icla_10_reproducibility.py  test_icla_11_discovery_authority.py  test_icla_1_capability_identity.py  test_icla_2_active_ckc.py  test_icla_3_distributed_authority.py  test_icla_5_intent_traceability.py  test_icla_6_assembly_lineage.py  test_icla_8_evidence_separation.py  test_icla_9_governed_activation.py  test_profiles.py
papers/institutional-capability-lineages/reference-implementation/tests/traces/: test_oauth_042.py
papers/institutional-capability-lineages/reference-implementation/tests/unit/: test_activation.py  test_evidence_gateway.py  test_lineage_and_impact.py  test_mandate_and_materialization.py  test_resolution_and_assembly.py  test_storage.py
(+50 files in other folders)
