[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "icla-reference"
version = "0.1.0"
description = "Schema-driven reference implementation of Institutional Capability Lineages (ICLA)."
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Mariano Garralda-Barrio" }
]

maintainers = [
  { name = "Mariano Garralda-Barrio" }
]

license = "MIT"
license-files = ["LICENSE"]

keywords = [
  "knowledge-centric-ai",
  "institutional-ai",
  "reference-implementation",
  "knowledge-governance",
  "context-engineering",
  "capability-management",
  "lineage",
  "software-architecture"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "jsonschema>=4.22,<5",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/mgarralda/knowledge-centric-ai/tree/main/papers/institutional-capability-lineages"
Repository = "https://github.com/mgarralda/knowledge-centric-ai"
Documentation = "https://github.com/mgarralda/knowledge-centric-ai/tree/main/papers/institutional-capability-lineages/specification"
Issues = "https://github.com/mgarralda/knowledge-centric-ai/issues"

[project.scripts]
icla = "icla.cli:main"

[tool.poetry]
packages = [{ include = "icla", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9"
pytest-cov = ">=5,<7"
ruff = ">=0.5,<1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
